--- a/responsivo.html
+++ b/responsivo.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>atividade de site responsivo</title>
 </head>
 <body>
     <main>
         <h1>teste</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium molestiae, veritatis quae laborum excepturi magnam dolor voluptates reiciendis, nobis fugiat adipisci a libero assumenda modi, laudantium deserunt error cumque qui Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptas repudiandae vero nisi possimus voluptates cum ipsum quam architecto perspiciatis repellendus labore iusto explicabo, id dignissimos? Animi cumque sint corrupti Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nemo veniam exercitationem asperiores illo labore! Mollitia expedita quo aut qui sint, cupiditate error neque delectus, molestias provident consectetur veniam quasi!</p>
-        <img src="/img/img-mulher.jpg" alt="">
+        <img src="img/img-mulher.jpg" alt="">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium molestiae, veritatis quae laborum excepturi magnam dolor voluptates reiciendis, nobis fugiat adipisci a libero assumenda modi, laudantium deserunt error cumque qui Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptas repudiandae vero nisi possimus voluptates cum ipsum quam architecto perspiciatis repellendus labore iusto explicabo, id dignissimos? Animi cumque sint corrupti Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nemo veniam exercitationem asperiores illo labore! Mollitia expedita quo aut qui sint, cupiditate error neque delectus, molestias provident consectetur veniam quasi!</p>
     </main>
 </body>
